# spectask-cli

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/skills/spectask-code-review-passed/: SKILL.md
.agents/skills/spectask-create/: SKILL.md
.agents/skills/spectask-extend/: SKILL.md
.cursor/skills/spectask-create/: SKILL.md
.cursor/skills/spectask-execute/: SKILL.md
.cursor/skills/spectask-extend/: SKILL.md
.cursor/skills/spectask-spec-review-passed/: SKILL.md
scripts/: publish.py
spec/: main.md  navigation.md  navigation.yaml
spec/design/: hla.md
spec/extend/: conventions.md
spec/tasks/_DONE_1-spectask-bootstrap-cli/: _DONE_1-project-and-cli.md  _DONE_2-template-bootstrap.md  _DONE_3-extend-overlay.md  overview.md
spec/tasks/_DONE_10-cli-init-update/: 1-cli-parse-and-help.md  2-tests.md  overview.md
spec/tasks/_DONE_11-cli-integration-ide-auto-update-tests/: 1-integration-ide-auto-cli.md  2-integration-update-default-ide.md  overview.md
spec/tasks/_DONE_12-publish-clean-dist-before-build/: overview.md
spec/tasks/_DONE_13-cli-ide-auto-multi-match/: overview.md
spec/tasks/_DONE_14-cli-skip-hla-file/: overview.md
spec/tasks/_DONE_15-cli-init-refuse-existing-navigation-hla/: overview.md
spec/tasks/_DONE_16-template-migration-json/: _DONE_1-migration-apply.md  _DONE_2-tests.md  (+1 more)
spectask_init/: __init__.py  __main__.py  acquire.py  bootstrap.py  cli.py
tests/: conftest.py  test_acquire.py  test_bootstrap_unit.py  test_cli_parse.py  test_integration_cli.py  test_navigation_merge.py  test_publish_version_bump.py
(+40 files in other folders)
