[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "spectask-init"
version = "0.1.6"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
spectask-init = "spectask_init.cli:main"

[tool.setuptools.packages.find]
include = ["spectask_init*"]
